--- a/study/mvc2/validation/itemservice/src/main/resources/errors.properties
+++ b/study/mvc2/validation/itemservice/src/main/resources/errors.properties
@@ -41,3 +41,12 @@ max= {0} \uAE4C\uC9C0 \uD5C8\uC6A9\uD569\uB2C8\uB2E4.
 ## \uC2A4\uD504\uB9C1\uC774 \uCD94\uAC00\uD574\uC900 typeMismatch.item.price / typeMismatch.price / typeMismatch.java.lang.Integer / typeMismatch \uC774\uC6A9 \uAC00\uB2A5
 # typeMismatch.java.lang.Integer=\uC22B\uC790\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
 typeMismatch=\uD0C0\uC785 \uC624\uB958\uC785\uB2C8\uB2E4.
+
+
+### \uBE48 \uAC80\uC99D\uAE30\uC5D0 \uC5D0\uB7EC\uCF54\uB4DC \uCD94\uAC00
+#NotNull.item.quantity=\uC218\uB7C9\uC740 \uD544\uC218\uAC12\uC785\uB2C8\uB2E4.
+#NotNull.item.price=\uAC00\uACA9\uAC12\uC740 \uD544\uC218\uC785\uB2C8\uB2E4.
+NotNull={0} \uACF5\uBC31 X
+NotBlank.item.itemName=\uC0C1\uD488\uBA85\uC740 \uACF5\uBC31\uC774 \uC544\uB2D9\uB2C8\uB2E4.
+NotBlank={0} \uBE48\uCE78 X
+Range={0}\uC740 {2} ~ {1} \uD5C8\uC6A9
