0609_mvc2_로그인 기능1 완

--- a/study/mvc2/login/login/src/main/resources/application.properties
+++ b/study/mvc2/login/login/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=login
 
 spring.messages.basename=messages, errors
+
+# 쿠키로 로그인기능 적용할 때, cookie를 사용하겠다는 옵션없더니 에러 발생..
+# 강의안 p.37
+server.servlet.session.tracking-modes=cookie
+
+## 세션 타임아웃 1800초 (30분 설정)
+#server.servlet.session.timeout=1800
