0716_지연로딩, 조회 성능 최적화

--- a/study/실전-JPA/jpashop/build.gradle
+++ b/study/실전-JPA/jpashop/build.gradle
@@ -39,6 +39,9 @@ dependencies {
 	testImplementation("org.junit.vintage:junit-vintage-engine") {
 		exclude group: "org.hamcrest", module: "hamcrest-core"
 	}
+
+	// Hibername5JakartaModule 추가
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5-jakarta'
 }
 
 tasks.named('test') {
